toevoegen van stukje bij wat is chatbot

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -389,4 +389,14 @@
   volume       = {03},
 }
 
+@Article{Khanna2015a,
+  author       = {Khanna, Anirudh and Pandey, Bishwajeet and Vashishta, Kushagra and Kalia, Kartik and Bhale, Pradeepkumar and Das, Teerath},
+  date         = {2015-07},
+  journaltitle = {International Journal of u- and e-Service, Science and Technology},
+  title        = {A Study of Today's A.I. through Chatbots and Rediscovery of Machine Intelligence},
+  doi          = {10.14257/ijunesst.2015.8.7.28},
+  pages        = {277-284},
+  volume       = {8},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
