--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -101,7 +101,7 @@ De kans op diefstal wordt ook alsmaar kleiner als de toegangscode bestaat uit el
 \subsection{Stappenplan voor de ontwikkeling en verkoop van QR-codes}%
 \label{sec:opbouwQR-codeVerkoop}
 
-Het proces voor het genereren van QR-codes van de mobiele applicatie wordt vooraf gegaan door allerlei fases. De aangekochte QR-code aanmaken en weergeven naar de klant is de laatste fase in het proces. De applicatie kan meerdere versies van QR-codes genereren elk met hun eigen doel en eigenschappen. Zo bestaan er QR-codes die de software automatisch updaten of een universele QR-code die automatisch alle lockers kan openen. Deze QR-codes zal gehanteerd worden door logistieke medewerkers.
+Het proces voor het genereren van QR-codes van de mobiele applicatie wordt vooraf gegaan door allerlei fases. De aangekochte QR-code aanmaken en weergeven naar de klant is de laatste fase in het proces. De applicatie kan meerdere versies van QR-codes genereren elk met hun eigen doel en eigenschappen. Zo bestaan er QR-codes die de software automatisch updaten of een universele QR-code die automatisch alle lockers kan openen. Deze QR-codes zullen gehanteerd worden door logistieke medewerkers. Hieronder volgen de vier stappen van het proces met als einddoel de QR-code aan te maken.
 
 \begin{comment}
     Hoewel een QR-code een standaard grafische voorstelling is, kan de grootte van een code verschillen. Wanneer een code groter is, ontstaat er meer witruimte tussen de pixels \autocite{Li2018}. Hierdoor kan de camera de code makkelijker en sneller scannen \autocite{Karrach2020}. Ook de foutcorrectie zorgt ervoor dat de resolutie vergroot zal worden. Hoe groter de resolutie van de QR-code hoe meer data gestockeerd kan worden \autocite{Chow2016}. 
@@ -921,7 +921,7 @@ Lijn 1 – 29 \ref{lst:pythonPinController}: Op basis van de correcte originele 
 \section{Wat is een chatbot}%
 \label{sec:chatbot}
 
-De term chatbot is heel snel geëvolueerd doorheen de voorbije jaren. Een chatbot is een "online mens-computer dialoogsysteem met natuurlijke taal" \autocite{Jia2003}. Dit wordt gebruikt om veel systemen te ondersteunen om vragen van klanten automatische te laten beantwoorden \autocite{Adamopoulou2020}. Ze maken gebruik van artificiële intelligentie die de vraagstelling van klanten analyseren. Op basis van de benodigdheden probeert de chatbot zo goed mogelijk te helpen \autocite{Khanna2015}. Dit concept waarbij de mens de computer om een gunst vraagt, wordt ‘Human-computer interaction’ (HCI) genoemd \autocite{Adamopoulou2020}. Chatbots zijn niet enkel gebouwd om conversaties op te vangen of om mensen te entertainen. Deze zijn ook ontworpen voor leer-, informatie- en bedrijfsdoeleinden \autocite{Shawar2007}. 
+De term chatbot is heel snel geëvolueerd doorheen de voorbije jaren. Een chatbot is een "online mens-computer dialoogsysteem met natuurlijke taal" \autocite{Jia2003}. Dit wordt gebruikt om veel systemen te ondersteunen alsook om vragen van klanten automatisch te laten beantwoorden \autocite{Adamopoulou2020}. Ze maken gebruik van artificiële intelligentie die de vraagstelling van klanten analyseren. Op basis van de benodigdheden probeert de chatbot zo goed mogelijk te helpen \autocite{Khanna2015}. Dit concept waarbij de mens de computer om een gunst vraagt, wordt ‘Human-computer interaction’ (HCI) genoemd \autocite{Adamopoulou2020}. De interactie tussen de mens en een gestuurde computer loopt via tekst of stem. De computer probeert één of meerdere talen te begrijpen aan de hand van ‘Natural Language Understanding’ (NLP) \autocite{Khanna2015a}. Deze techniek is ontworpen voor het begrijpen van menselijke noden. Het uiteindelijk doel van de eindgebruiker zal hieruit geëxtraheerd worden.  Chatbots zijn niet enkel gebouwd om conversaties op te vangen of om mensen te entertainen. Deze zijn ook ontworpen voor leer-, informatie- en bedrijfsdoeleinden \autocite{Shawar2007}. 
 
 \subsection{Historie van een chatbot}%
 \label{sec:chatbotHistorie}
@@ -975,7 +975,10 @@ De bots hebben altijd een specifiek doel. Daarvoor wordt er gekeken naar wat de 
 
 De drie modellen die geklasseerd onder ‘respons en generation method’ stellen methodes voor die de vraagstelling in acht neemt en genereert een gepast antwoord. Als eerste bestaat er de ‘Rule based’ model. Deze bots worden zo getraind en geprogrammeerd om op specifieke zoektermen de juiste vooraf gedefinieerde antwoorden te verschaffen. De toepassing van \ac{FAQ} bot is hiervan een voorbeeld. Deze bot verschilt maar nauwelijks ten opzichte van een ‘Retrieval based model, wat meer flexibiliteit geeft. Het analyseert verschillende mogelijke bronnen aan de hand van ‘APIs’. Het laatste model is ‘Generative’.  Dit model is gebaseerd om op vorige berichten een antwoord te voorzien. Dit is het meest krachtigste model en het meest complexe om te programmeren en te trainen \autocite{Adamopoulou2020} \autocite{Hien2018}.
 
+Voor het aanmaken van een chatbot die verloren QR-codes zal terugwinnen, kan de chatbot onderverdeeld worden in een juiste classificatie. De technologie die van toepassing is op Lockit Rentals zal gebaseerd zijn op een gesloten domein. Hierdoor zal de chatbot niet op alle vragen een gepast antwoord kunnen geven. De chatbot zal op vooraf geprogrammeerde vragen de juiste informatie geven. Het dialoog systeem zal de antwoorden verschaffen aan de hand van een ‘intrapersonal service’. Hij verzamelt correct gefilterde informatie uit de databank en verschaft deze aan de eindgebruiker. De chatbot voert een specifieke opdracht uit waardoor de klant weer toegang krijgt tot zijn eigen persoonlijke locker. De laatste classificatie maakt gebruik van rule based methodes om de chatbot zo goed mogelijk te ontwikkelen. Deze regels zijn vooraf gedefinieerd en begeleiden de klant in de juiste richting waardoor het terugkrijgen van een verloren QR-code een vereenvoudigd proces wordt.
 \subsection{Platformen om chatbots te bouwen}%
 \label{sec:chatbotBouwen}
+
+
 
 
