adding methodologie from word to latex

--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -399,4 +399,26 @@
   volume       = {8},
 }
 
+@InProceedings{Suriyon2021,
+  author    = {Suriyon, Tansuriyavong and Keisuke, Higa and Choompol, Boonmee},
+  booktitle = {The Second TSME International Conference on Mechanical Engineering},
+  date      = {2021},
+  title     = {Development of guide robot by using QR code recognition},
+  volume    = {21},
+}
+
+@InProceedings{Ou2014,
+  author    = {Ou, Fu Chao and Jiang, Wei},
+  booktitle = {Advances in Applied Sciences and Manufacturing},
+  date      = {2014-02},
+  title     = {Research of the QR Code Based on Image Preprocessing},
+  doi       = {10.4028/www.scientific.net/AMR.850-851.835},
+  pages     = {835--838},
+  publisher = {Trans Tech Publications Ltd},
+  series    = {Advanced Materials Research},
+  volume    = {850},
+  abstract  = {With the development of information technology, the QR code technology in the application of information technology industry has become more and more widely, its action also is particularly important. In modern business activities, with the popularity of smart phones and all kinds of mobile intelligent device, which can realize the application is very extensive. But in practice, influenced by acquisition equipment, collections of images tend to have all kinds of noise, affect later decoding result. Late in order to decode the reliability and stability, based on the smart phone and mobile equipment acquisition have shadows and space of tilt of the QR code image as an example, discusses the gray, filtering, binaryzation, edge detection and image preprocessing technology such as geometric correction. Especially the closing operations in the application of morphology in image processing on the image to get rid of the shadow and corrosion expansion, extraction of the target area the edge of the straight line obtained very good effect, in addition to get rid of the shadow, the four control points using morphological expansion corrosion and correction of the QR code.},
+  keywords  = {Image Processing, Erosion, Edge Detection, Dilation, QR Code, Close Operation},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
