--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -11,4 +11,46 @@
 %% mogelijke manier toegepast hebt om een antwoord te vinden op de
 %% onderzoeksvraag.
 
+Zoals bij de start van elk onderzoek is het verwerven van allerhande informatie over het onderwerp het belangrijkste aspect. Deze informatie omvat de implementatie van de locker verhuur en wordt gecapteerd in de literatuurstudie die te vinden is in hoofdstuk \ref{ch:stand-van-zaken}. Er wordt een duidelijk onderscheid gemaakt tussen de werking van QR-codes en het ontwikkelen van een chatbot. 
+
+Als de informatie verwerkt is, kunnen beschikbare opties voor mogelijke oplossingen bekeken en aangeboden worden. Om deze fase zo goed mogelijk te vervolledigen moeten de requirements verzameld en geanalyseerd worden. De requirements zorgen voor een duidelijke afbakening. Uit de voorop gestelde eisen zal volgen welke technologieën geschikt zijn om de probleemstelling op te lossen. Nadien volgt een uitwerking met bijhorende experimenten die terug te vinden is in het hoofdstuk van de praktische Proof-Of-Concept.
+
+%TODO: onderverdeling herbekijken met titels
+
+\section{QR-code scanner requirments analyse}%
+\label{sec:scannerRequirment}
+
+Bij de verbetering voor de scanbaarheid op QR-codes heeft het bestuur van het bedrijf gevraagd om de manier van scannen sneller te maken. Vooreerst moet aangetoond worden op welke manier de huurders hun QR-code sneller kunnen laten scannen. Bij het scannen van QR-codes met ingebouwde USB camera’s is er theoretisch gezien geen probleem. Lockit Rentals heeft aangegeven dat door onveranderbare factoren er problematische en foutieve gevolgen zijn \autocite{Girisha2022}. Deze onveranderlijke factoren zijn vaak regen, wind, schaduw en lichtinval \autocite{Ou2014}.  Als gevolg dat de camera het beeld niet goed opneemt en hierdoor blijft de toegang geweigerd ten opzichte van de huurder. 
+Bewegende QR-codes zijn moeilijk detecteerbaar, hierdoor is de festivalganger verplicht de QR-code in een stille houding te plaatsen. De QR-code zal door de festivalganger op een vaste afstand gehouden moeten worden om zo het algoritme zijn werk te laten doen\autocite{Suriyon2021}. De snelheid en de manier om een QR-code te scannen zal onder de loep genomen worden in bijhorende Proof-Of-Concept.
+
+\section{QR-code scanner uitwerking}%
+\label{sec:scannerUitwerking}
+
+Om een snellere en efficiëntere QR-code scanner te bereiken, start het onderzoek met het analyseren van hedendaagse code. Door de scan functionaliteit onder de loep te nemen kunnen de sterktes en zwaktes geïdentificeerd worden. Hoe deze code opgebouwd is, verwijs ik door naar de sectie \ref{sec:WerkingUnits}.
+Om de handelingen en ervaringen van festivalgangers zo goed mogelijk na te bootsen gaan er simulaties volgen. Deze simulaties bestaan uit test scenario’s en manieren om een QR-code te scannen. De originele code moet aangepast worden zodat we de informatie verschaffen hoe snel het duurt om één QR-code in te lezen. Uit deze simulaties komen referentiegegevens, zoals tijdstip van uitlezen, welke data de QR-code bevat en de duur van het uitlezen van x aantal QR-codes. Om de ervaringen van de festivalgangers zo goed mogelijk na te bootsen zullen we deze experimenten uitvoeren in verschillende situaties en omgevingen.
+
+De factoren en omgevingen die veranderen doorheen het experiment:
+
+\begin{itemize}
+    \item Lichtinval
+    \item Donkere omgeving
+    \item Beschadigde QR-code
+    \item Bewegende QR-code
+    \item Deels afgedekte QR-code
+\end{itemize}
+
+%TODO: verwijzen naar juiste verwerkingsresultaten
+
+Graag zou ik willen verwijzen naar de verkregen resultaten van het experiment waarbij de originele werkwijze voor het uitlezen van QR-codes is toegepast \ref{ch:verwerkingresultaten}. Deze resultaten bieden waardevolle inzichten in het functioneren van de oorspronkelijke methode en vormen een belangrijke referentie voor het vergelijken van de prestaties van nieuwe QR-code scanner.
+
+Het zoeken naar een betere en snellere QR-code scanner software of hardware zal de snelheid van het scannen verhogen. Om een betrouwbare vergelijking te maken tussen de originele werkwijze en de nieuwe QR-code scanner, gaan de experimenten opnieuw uitgevoerd worden. Hierdoor kunnen we de resultaten van beide methoden op een nauwkeurige manier vergelijken en kan er tot een weloverwogen conclusie gekomen worden. In het hoofdstuk dat zich richt op de verwerking van de resultaten, zal dan ook uitvoerig worden ingegaan op de verschillen en overeenkomsten tussen de twee manieren van scannen bij een locker unit.
+
+\section{Chatbot requirements Analyse}%
+\label{sec:chatbotRequirment}
+
+
+
+
+
+
 
